优化redis连接池配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,25 +42,23 @@ logging.level.com.xh.lesson=debug
 #swagger 开关
 swagger2.enable=true
 
-#redis配置开始
-# Redis数据库索引（默认为0）
-spring.redis.database=0
-# Redis服务器地址
+# Redis 服务?地址
 spring.redis.host=localhost
-# Redis服务器连接端口
+# Redis 服务?连接端?
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
-#spring.redis.password=123456
-# 连接池最大连接数（使用负值表示没有限制）
-spring.redis.jedis.pool.max-active=1024
-# 连接池最大阻塞等待时间（使用负值表示没有限制）10秒
-spring.redis.jedis.pool.max-wait=PT10S
-# 连接池中的最大空闲连接
-spring.redis.jedis.pool.max-idle=200
-# 连接池中的最小空闲连接
-spring.redis.jedis.pool.min-idle=0
-# 连接超时时间（10秒）
+# 连接池最大连接数（使用负值表示没有限制） 默认 8
+spring.redis.lettuce.pool.max-active=100
+# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+spring.redis.lettuce.pool.max-wait=PT10S
+# 连接池中的最大空闲连接 默认 8
+spring.redis.lettuce.pool.max-idle=30
+# 连接池中的最小空闲连接 默认 0
+spring.redis.lettuce.pool.min-idle=1
+#链接超时时间
 spring.redis.timeout=PT10S
+
+spring.devtools.restart.poll-interval=3000ms
+spring.devtools.restart.quiet-period=2999ms
 #JWT 密钥
 jwt.secretKey=78944878877848fg)
 jwt.accessTokenExpireTime=PT2H
